United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 6951623 possible performance problems in FollowReferences() and GetObjectsWithTags()
6951623 : possible performance problems in FollowReferences() and GetObjectsWithTags()

Details
Type:
Bug
Submit Date:
2010-05-11
Status:
Closed
Updated Date:
2013-05-22
Project Name:
JDK
Resolved Date:
2011-09-30
Component:
hotspot
OS:
generic
Sub-Component:
jvmti
CPU:
generic
Priority:
P3
Resolution:
Fixed
Affected Versions:
hs14
Fixed Versions:
hs22

Related Reports
Backport:
Backport:
Backport:
Backport:
Backport:
Backport:
Backport:
Relates:

Sub Tasks

Description
See comments.

                                    

Comments
EVALUATION

See main CR
                                     
2011-09-14
EVALUATION

http://hg.openjdk.java.net/hsx/hotspot-main/hotspot/rev/88dce6a60ac8
                                     
2011-07-27
EVALUATION

http://hg.openjdk.java.net/hsx/hotspot-rt/hotspot/rev/88dce6a60ac8
                                     
2011-06-30
SUGGESTED FIX

Please see the attached 6951623-webrev-cr0.tgz for
the proposed fix (code review round 0).
                                     
2011-06-27
EVALUATION

This bug will be used to handle the:

- calls collect_stack_roots() before collect_simple_roots()

optimization that Ashok provided in 7043987.
                                     
2011-06-27



Hardware and Software, Engineered to Work Together