6951623: 3/3 possible performance problems in FollowReferences() and GetObjectsWithTags()

Call collect_stack_roots() before collect_simple_roots() as an optimization.

Reviewed-by: ysr, dsamersoff, dcubed